--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: psf/black@stable
         with:
-          options: "--check --verbose -t py310 -t py311"
+          options: "--verbose -t py310 -t py311"
           src: "./src"
           jupyter: true
           version: "~= 23.11"
