--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -39,6 +39,6 @@ jobs:
           body: |
             There appeared to be some python formatting in ${{ github.sha }} that did not conform with Black's formatting standards.
             So [Black](https://github.com/psf/black) formatter was used to fix these issues.
-          base: ${{ github.head_ref }} # Creates pull request onto pull request or commit branch
+          base: ${{ github.head_ref }}
           branch: github-actions/black
       
