--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -33,8 +33,9 @@ jobs:
         if: ${{ failure() }}
         uses: EndBug/add-and-commit@v9
         with:
-          author_name: ${{ github.actor }}
-          author_email: ${{ github.actor }}@users.noreply.github.com
+          default_author: github_actions
+          # author_name: ${{ github.actor }}
+          # author_email: ${{ github.actor }}@users.noreply.github.com
           add: "./src"
           message: "Ran Black formatted on python code in ./src/"
           
