--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -33,7 +33,7 @@ jobs:
         if: ${{ failure() }}
         uses: EndBug/add-and-commit@v9
         with:
-          default_author: github_actions
+          # default_author: github_actions
           committer_name: GitHub Actions
           committer_email: 41898282+github-actions[bot]@users.noreply.github.com
           # author_name: ${{ github.actor }}
