Added cors condig, configurable in the dotenv file
See .env.example for more details

--- a/src/api/.env.example
+++ b/src/api/.env.example
@@ -1,5 +1,6 @@
-API_KEY= # Optional
-REDIS_HOST= # Optional
-REDIS_PORT= # Optional
-REDIS_USERNAME= # Optional
-REDIS_PASSWORD= # Optional
+API_KEY= # Optional defaults to "None"
+REDIS_HOST= # Optional defaults to "localhost"
+REDIS_PORT= # Optional defaults to "6379"
+REDIS_USERNAME= # Optional defaults to "None"
+REDIS_PASSWORD= # Optional defaults to "None"
+CORS_ALLOWED_ORIGINS=["*"] # Optional defaults to "[]" an empty list
