Provide birds audio detection basement
- Add basement for birds audio detection
- Add huge blobs to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -874,3 +874,8 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/jetbrains+all,visualstudiocode,visualstudio,python,venv,jupyternotebooks,django,flask
+
+audios/**
+streams/**
+!audios/.gitkeep
+!streams/.gitkeep
