--- a/src/stream_downloader/.env.example
+++ b/src/stream_downloader/.env.example
@@ -1,6 +1,6 @@
 VIDEO_SEGMENT_TIME=10 # Time in seconds for each video segment
 SAVE_PATH="./streams" # Path to save the video files
-DOWNLOADER_LOG_LEVEL="debug" # See https://download.github.io/picolog/
+PROGRAM_LOG_LEVEL="debug" # See https://download.github.io/picolog/
 FFMPEG_LOG_LEVEL="debug" # See https://ffmpeg.org/ffmpeg.html#Generic-options
 
 REDIS_HOST= # Optional defaults to "localhost"
