updated picologging and .env.example

--- a/src/stream_downloader/.env.example
+++ b/src/stream_downloader/.env.example
@@ -1,9 +1,10 @@
-VIDEO_SEGMENT_TIME=10 # Time in seconds for each video segment
-SAVE_PATH="./streams" # Path to save the video files
-PROGRAM_LOG_LEVEL="debug" # See https://download.github.io/picolog/
-FFMPEG_LOG_LEVEL="debug" # See https://ffmpeg.org/ffmpeg.html#Generic-options
+PROGRAM_LOG_LEVEL= # See https://download.github.io/picolog/, default = info
+FFMPEG_LOG_LEVEL= # See https://ffmpeg.org/ffmpeg.html#Generic-options, default = info
 
-REDIS_HOST= # Optional defaults to "localhost"
-REDIS_PORT= # Optional defaults to "6379"
-REDIS_USERNAME= # Optional defaults to "None"
-REDIS_PASSWORD= # Optional defaults to "None"
+VIDEO_SEGMENT_TIME= # Time in seconds for each video segment, default = 10
+SAVE_PATH= # Path to save the video files
+
+REDIS_HOST= # The host address where the Redis server is located, default = localhost
+REDIS_PORT= # The port for the Redis server, default = 6379
+REDIS_USERNAME= # Username for the Redis server, default = None
+REDIS_PASSWORD= # Password for the Redis server, default = None
