API changes to use ranked streams for the endpoints

--- a/src/api/.env.example
+++ b/src/api/.env.example
@@ -1,6 +1,6 @@
-API_KEY= # Optional defaults to "None"
-REDIS_HOST= # Optional defaults to "localhost"
-REDIS_PORT= # Optional defaults to "6379"
-REDIS_USERNAME= # Optional defaults to "None"
-REDIS_PASSWORD= # Optional defaults to "None"
-CORS_ALLOWED_ORIGINS=["*"] # Optional defaults to "[]" an empty list
+API_KEY= # Authentication key for the API, default = None
+REDIS_HOST= # The host address where the Redis server is located, default = localhost
+REDIS_PORT= # The port for the Redis server, default = 6379
+REDIS_USERNAME= # Username for the Redis server, default = None
+REDIS_PASSWORD= # Password for the Redis server, default = None
+CORS_ALLOWED_ORIGINS=["*"] # default = "[]" an empty list
