Bug fixes and further work on streamer
General bug fixes and further progress on streamer, but it does not work
completely yet

Co-authored-by: Cédric Cortenraede <c.cortenraede@outlook.com>

--- a/src/image_detection/.env.example
+++ b/src/image_detection/.env.example
@@ -1,10 +1,10 @@
+PROGRAM_LOG_LEVEL= # See https://download.github.io/picolog/, default = info
+
 DEVICE= # Set torch device to run the model with, default = cpu
 MODEL_PATH= # Set path for the model
 MODEL_CONFIDENCE= # Set confidence needed for model to make prediction, default = 0.7
 
-PROGRAM_LOG_LEVEL="debug" # See https://download.github.io/picolog/, default = info
-
-REDIS_HOST= # Optional defaults to "localhost"
-REDIS_PORT= # Optional defaults to "6379"
-REDIS_USERNAME= # Optional defaults to "None"
-REDIS_PASSWORD= # Optional defaults to "None"
+REDIS_HOST= # The host address where the Redis server is located, default = localhost
+REDIS_PORT= # The port for the Redis server, default = 6379
+REDIS_USERNAME= # Username for the Redis server, default = None
+REDIS_PASSWORD= # Password for the Redis server, default = None
