--- a/src/audio_detection/.env.example
+++ b/src/audio_detection/.env.example
@@ -1,10 +1,10 @@
-MODEL_CONFIDENCE= # Set confidence needed for model to make prediction, default = 0.7
-
-THREAD_COUNT= # Number of threads to use for data extraction, default = 5
 PROGRAM_LOG_LEVEL= # See https://download.github.io/picolog/, default = info
-DETECT_AUDIO_ONLY_AFTER_MOTION
+THREAD_COUNT= # Number of threads to use for data extraction, default = 5
 
-REDIS_HOST= # Optional defaults to "localhost"
-REDIS_PORT= # Optional defaults to "6379"
-REDIS_USERNAME= # Optional defaults to "None"
-REDIS_PASSWORD= # Optional defaults to "None"
+MODEL_CONFIDENCE= # Set confidence needed for model to make prediction, default = 0.7
+DETECT_AUDIO_ONLY_AFTER_MOTION= # Set to True to only detect audio after motion has been detected, default = False
+
+REDIS_HOST= # The host address where the Redis server is located, default = localhost
+REDIS_PORT= # The port for the Redis server, default = 6379
+REDIS_USERNAME= # Username for the Redis server, default = None
+REDIS_PASSWORD= # Password for the Redis server, default = None
