--- a/src/video_data_extractor/.env.example
+++ b/src/video_data_extractor/.env.example
@@ -1,10 +1,11 @@
-THREAD_COUNT= # Number of threads to use for data extraction, default = 5
 PROGRAM_LOG_LEVEL= # See https://download.github.io/picolog/, default = info
 FFMPEG_LOG_LEVEL= # See https://ffmpeg.org/ffmpeg.html#Generic-options, default = info
+THREAD_COUNT= # Number of threads to use for data extraction, default = 5
+
 FRAMES_PER_SECOND= # Number of frames to extract per second, default = 1
 FRAMES_TO_GET= # Number of frames to extract, default = 0 (all)
 
-REDIS_HOST= # Optional defaults to "localhost"
-REDIS_PORT= # Optional defaults to "6379"
-REDIS_USERNAME= # Optional defaults to "None"
-REDIS_PASSWORD= # Optional defaults to "None"
+REDIS_HOST= # The host address where the Redis server is located, default = localhost
+REDIS_PORT= # The port for the Redis server, default = 6379
+REDIS_USERNAME= # Username for the Redis server, default = None
+REDIS_PASSWORD= # Password for the Redis server, default = None
