Update .gitignore to keep the .gitkeep in the streams directory

--- a/.gitignore
+++ b/.gitignore
@@ -875,6 +875,6 @@ FodyWeavers.xsd
 
 # End of https://www.toptal.com/developers/gitignore/api/jetbrains+all,visualstudiocode,visualstudio,python,venv,jupyternotebooks,django,flask
 
-src/audios/**
+
 src/streams/**
-!src/audios/.gitkeep
+!src/streams/.gitkeep
