Added uservotes to ranking and first dockerfile

--- a/src/motion_detection/.env.example
+++ b/src/motion_detection/.env.example
@@ -1,5 +1,5 @@
 PROGRAM_LOG_LEVEL= # See https://download.github.io/picolog/, default = info
-THREAD_COUNT # Number of threads to use for data extraction, default = 5
+THREAD_COUNT= # Number of threads to use for data extraction, default = 5
 
 PIXEL_THRESHOLD_FOR_MOVEMENT= # Threshold between consecutive frames to determine if a pixel consisted of movement, default = 30
 MIN_PIXEL_CHANGE_COUNT_FOR_MOVEMENT= # Amount of pixels that need to consist of movement for the two frames to be classified as movement, default = 1000
