--- a/src/api/.env.example
+++ b/src/api/.env.example
@@ -4,4 +4,9 @@ REDIS_PORT= # The port for the Redis server, default = 6379
 REDIS_USERNAME= # Username for the Redis server, default = None
 REDIS_PASSWORD= # Password for the Redis server, default = None
 CORS_ALLOWED_ORIGINS=["*"] # default = "[]" an empty list
-WEATHER_API_KEY= # API key for www.weatherapi.com/
+WEATHER_API_KEY= # API key from www.weatherapi.com/
+POSTGRES_HOST=
+POSTGRES_PORT=
+POSTGRES_USERNAME=
+POSTGRES_PASSWORD=
+POSTGRES_DATABASE=
