--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,8 +32,8 @@ torchaudio = { version = "2.3.1", source="torch"}
 torchvision = { version = "0.18.1", source="torch"}
 jupyter = "^1.0.0"
 sqlalchemy = "^2.0.30"
-psycopg2 = "^2.9.9"
 asyncpg = "^0.29.0"
+psycopg2-binary = "^2.9.9"
 
 [[tool.poetry.source]]
 name = "torch"
