--- a/.devcontainer/compose.yaml
+++ b/.devcontainer/compose.yaml
@@ -4,8 +4,8 @@ services:
       context: ..
       dockerfile: .devcontainer/Dockerfile     
     command: /bin/sh -c "while sleep 1000; do :; done"
-    volumes:
-      - ../:/workspaces/personal_wildlife_stream
+#    volumes:
+#      - ../:/workspaces/personal_wildlife_stream
 
   postgres:
     image: postgres:16-bookworm
