Added compose which only contains the databases

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,3 @@
-version: '3.8'
 name: 'personal-wildlife-stream-backend'
 
 services:
@@ -11,3 +10,42 @@ services:
   # speech_subtitle_generation:  
   # stream_ranker:  
   # video_streamer:
+
+  postgres:
+    image: postgres:16-bookworm
+    restart: unless-stopped
+    volumes:
+      - type: volume
+        source: postgres-data
+        target: /var/lib/postgresql/data
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_DB: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - name: database
+        target: 5432
+        published: 5432
+        mode: host
+
+  redis:
+    image: redis/redis-stack:7.4.0-rc1
+    restart: always
+    volumes:
+      - type: volume
+        source: redis-data
+        target: /data
+    ports:
+      - name: database
+        target: 6379
+        published: 6379
+        mode: host
+      - name: GUI
+        target: 8001
+        published: 8001
+        mode: host
+
+
+volumes:
+  postgres-data:
+  redis-data:
