--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ jupyter = "^1.0.0"
 sqlalchemy = "^2.0.30"
 asyncpg = "^0.29.0"
 psycopg2-binary = "^2.9.9"
+bcrypt = "^4.1"
 
 [[tool.poetry.source]]
 name = "torch"
