Added API calls for getting stream information
Added API calls to stream_downloader
Changed variable naming in stream_downloader
Changed variable naming in motion_detection
Added API calls to image_detection

Co-authored-by: Cédric Cortenraede <c.cortenraede@outlook.com>

--- a/src/stream_downloader/.env.example
+++ b/src/stream_downloader/.env.example
@@ -1,10 +1,25 @@
-PROGRAM_LOG_LEVEL= # See https://download.github.io/picolog/, default = info
-FFMPEG_LOG_LEVEL= # See https://ffmpeg.org/ffmpeg.html#Generic-options, default = info
+# –––––––-–––––––––------------------------------------ Logging --------------------------------------–––––––––––––––– #
+# See https://docs.python.org/3/library/logging.html#logging-levels, default = 20 (info)
+PROGRAM_LOG_LEVEL=
+# If the logger should print the logs in a nice way, default = False
+LOG_PRETTY_PRINT=
+# See https://ffmpeg.org/ffmpeg.html#Generic-options, default = 32 (info)
+FFMPEG_LOG_LEVEL=
+# Whether yt-dlp should log extra information, default = True
+YT_DLP_QUIET=
 
-VIDEO_SEGMENT_TIME= # Time in seconds for each video segment, default = 10
-SAVE_PATH= # Path to save the video files
+# –––––––––-----------------------------------–––––– DOWNLOAD CONFIG -–––––--------------------------------––––––––––– #
+# Time in seconds for each video segment, default = 10
+VIDEO_SEGMENT_TIME=
+# Path to save the video files
+SAVE_PATH=save_path
 
-REDIS_HOST= # The host address where the Redis server is located, default = localhost
-REDIS_PORT= # The port for the Redis server, default = 6379
-REDIS_USERNAME= # Username for the Redis server, default = None
-REDIS_PASSWORD= # Password for the Redis server, default = None
+# –––––––––-----------------------------------––––––- REDIS CONFIG ---–––––--------------------------------––––––––––– #
+# The host address where the Redis server is located, default = localhost
+REDIS_HOST=
+# The port for the Redis server, default = 6379
+REDIS_PORT=
+# Username for the Redis server, default = None
+REDIS_USERNAME=
+# Password for the Redis server, default = None
+REDIS_PASSWORD=
