--- a/src/stream_downloader/pyproject.toml
+++ b/src/stream_downloader/pyproject.toml
@@ -23,6 +23,7 @@ pydantic-settings = "^2.1.0"
 opencv-python = "^4.9.0.80"
 watchdog = "^3.0.0"
 yt-dlp = "^2024.4.9"
+requests = "^2.32.3"
 
 [build-system]
 requires = ["poetry-core"]
