--- a/src/image_detection/.env.example
+++ b/src/image_detection/.env.example
@@ -1,7 +1,7 @@
 PROGRAM_LOG_LEVEL= # See https://download.github.io/picolog/, default = info
 
 DEVICE= # Set torch device to run the model with, default = cpu
-MODEL_PATH= # Set path for the model
+DEFAULT_MODEL_PATH= # Set path for the default model
 MODEL_CONFIDENCE= # Set confidence needed for model to make prediction, default = 0.7
 
 REDIS_HOST= # The host address where the Redis server is located, default = localhost
