General clean-up, bug fixes and config update
Cleaned up logging messages.
Cleaned up code and added comments.
Fixed some minor bugs.
Removed queuehandler instead segment_lists from FFmpeg are used.
Added config variables for API connection
Cleaned up .env.example with more explanation for the different
configurable variables

--- a/src/stream_downloader/.env.example
+++ b/src/stream_downloader/.env.example
@@ -1,25 +1,45 @@
-# –––––––-–––––––––------------------------------------ Logging --------------------------------------–––––––––––––––– #
-# See https://docs.python.org/3/library/logging.html#logging-levels, default = 20 (info)
+# –––––––-–––––––––--------------------------------- Logging CONFIG ----------------------------------–––––––––––––––– #
+# Logging level for the whole program, excluding the ffmpeg and yt-dlp processes these have seperate log condigurations.
+# Possible values are: debug, info, warning, error and critical. Default = info.
+# See also https://docs.python.org/3/library/logging.html#logging-levels.
 PROGRAM_LOG_LEVEL=
-# If the logger should print the logs in a nice way, default = False
+# If the logger should print the logs in a nice way, default = True.
 LOG_PRETTY_PRINT=
-# See https://ffmpeg.org/ffmpeg.html#Generic-options, default = 32 (info)
+# Logging level specific for the ffmpeg process. Possbile values are: quiet, panic, fatal, error, warning, info,
+# verbose, debug and trace. Default = warning.
+# See also https://ffmpeg.org/ffmpeg.html#Generic-options.
 FFMPEG_LOG_LEVEL=
-# Whether yt-dlp should log extra information, default = True
+# Whether yt-dlp should log extra information, default = True.
 YT_DLP_QUIET=
 
 # –––––––––-----------------------------------–––––– DOWNLOAD CONFIG -–––––--------------------------------––––––––––– #
-# Time in seconds for each video segment, default = 10
+# Time in seconds for each video segment, default = 00:00:10.
+# Formatting guide: https://docs.pydantic.dev/latest/api/standard_library_types/#datetimetime.
 VIDEO_SEGMENT_TIME=
-# Path to save the video files
+# How long the downloader should wait before trying to restart the stream download task, default is  01:00:00.
+# Formatting guide: https://docs.pydantic.dev/latest/api/standard_library_types/#datetimetime.
+RETRY_TIME=
+# Path to save the video files.
 SAVE_PATH=save_path
 
 # –––––––––-----------------------------------––––––- REDIS CONFIG ---–––––--------------------------------––––––––––– #
-# The host address where the Redis server is located, default = localhost
+# The host address where the Redis server is located, default = localhost.
+# When this application is running in a docker together with redis, the host address should be the name of the
+# service/container for example "redis". When only this application is running in docker, localhost will not work and
+# the device's IP address should be used.
 REDIS_HOST=
-# The port for the Redis server, default = 6379
+# The port for the Redis server, default = 6379.
 REDIS_PORT=
-# Username for the Redis server, default = None
+# Username for the Redis server, default = None.
 REDIS_USERNAME=
-# Password for the Redis server, default = None
+# Password for the Redis server, default = None.
 REDIS_PASSWORD=
+
+# –––––––––-----------------------------------––––––-- API CONFIG ----–––––--------------------------------––––––––––– #
+# Wethter the connectio to the API should be made over a secure connection (HTTPS), default = False.
+# Same config rules apply here as for the REDIS_HOST.
+API_PRIVATE_TLS=
+# The host address where the Redis server is located, default = localhost.
+API_PRIVATE_HOST=
+# The port for the Redis server, default = 8000.
+API_PRIVATE_PORT=
