--- a/src/stream_downloader/.env.example
+++ b/src/stream_downloader/.env.example
@@ -12,11 +12,11 @@ FFMPEG_LOG_LEVEL=
 # Whether yt-dlp should log extra information, default = True.
 YT_DLP_QUIET=
 
-# –––––––––-----------------------------------–––––– DOWNLOAD CONFIG -–––––--------------------------------––––––––––– #
+# –––––––––-----------------------------------– STREAM DOWNLOADER CONFIG ––--------------------------------––––––––––– #
 # Time in seconds for each video segment, default = 00:00:10.
 # Formatting guide: https://docs.pydantic.dev/latest/api/standard_library_types/#datetimetime.
 VIDEO_SEGMENT_TIME=
-# How long the downloader should wait before trying to restart the stream download task, default is  01:00:00.
+# How long the stream downloader should wait before trying to restart the stream download task, default is  01:00:00.
 # Formatting guide: https://docs.pydantic.dev/latest/api/standard_library_types/#datetimetime.
 RETRY_TIME=
 # Path to save the video files.
@@ -36,10 +36,10 @@ REDIS_USERNAME=
 REDIS_PASSWORD=
 
 # –––––––––-----------------------------------––––––-- API CONFIG ----–––––--------------------------------––––––––––– #
-# Wethter the connectio to the API should be made over a secure connection (HTTPS), default = False.
+# whether the connection to the API should be made over a secure connection (HTTPS), default = False.
 # Same config rules apply here as for the REDIS_HOST.
 API_PRIVATE_TLS=
-# The host address where the Redis server is located, default = localhost.
+# The host address where the API server is located, default = localhost.
 API_PRIVATE_HOST=
-# The port for the Redis server, default = 8000.
+# The port for the API server, default = 8001.
 API_PRIVATE_PORT=
