Updated .env.example and variable renaming
Updated .env.example with more explanation on the variables

--- a/src/video_data_extractor/.env.example
+++ b/src/video_data_extractor/.env.example
@@ -1,11 +1,42 @@
-PROGRAM_LOG_LEVEL= # See https://download.github.io/picolog/, default = info
-FFMPEG_LOG_LEVEL= # See https://ffmpeg.org/ffmpeg.html#Generic-options, default = info
-THREAD_COUNT= # Number of threads to use for data extraction, default = 5
+# –––––––-–––––––––--------------------------------- Logging CONFIG ----------------------------------–––––––––––––––– #
+# Logging level for the whole program, excluding the ffmpeg processes this has a seperate log condiguration.
+# Possible values are: debug, info, warning, error and critical. Default = info.
+# See also https://docs.python.org/3/library/logging.html#logging-levels.
+PROGRAM_LOG_LEVEL=
+# If the logger should print the logs in a nice way, default = True.
+LOG_PRETTY_PRINT=
+# Logging level specific for the ffmpeg process. Possbile values are: quiet, panic, fatal, error, warning, info,
+# verbose, debug and trace. Default = warning.
+# See also https://ffmpeg.org/ffmpeg.html#Generic-options.
+FFMPEG_LOG_LEVEL=
 
-FRAMES_PER_SECOND= # Number of frames to extract per second, default = 1
-FRAMES_TO_GET= # Number of frames to extract, default = 0 (all)
+# –––––––––-----------------------------------–– DATA EXTRACTION CONFIG –––--------------------------------––––––––––– #
+# Number of threads to use for data extraction, default = 5.
+# The more threads the more streams this application can process at the same time at the cost of a heavier load on the
+# Machine.
+THREAD_COUNT=
+# Number of frames to extract per second, default = 1.
+# So if the video is 30 FPS and this value is 1, every 30th frame will be extracted.
+# If the value is 2, every 15th frame will be extracted, et cetera.
+FRAMES_PER_SECOND=
+# Number of frames to extract, default = 0 (all)
+# If this value is 0, the "FRAMES_PER_SECOND" is 1 and the video is 10 seconds long, 10 frames will be extracted.
+FRAMES_TO_GET=
+# How long the video data extractor should wait before retrying to get an element from the queue default is  00:00:10.
+# Formatting guide: https://docs.pydantic.dev/latest/api/standard_library_types/#datetimetime.
+RETRY_TIME=
+# Path to save the video files.
+SAVE_PATH=save_path
 
-REDIS_HOST= # The host address where the Redis server is located, default = localhost
-REDIS_PORT= # The port for the Redis server, default = 6379
-REDIS_USERNAME= # Username for the Redis server, default = None
-REDIS_PASSWORD= # Password for the Redis server, default = None
+# –––––––––-----------------------------------––––––- REDIS CONFIG ---–––––--------------------------------––––––––––– #
+# The host address where the Redis server is located, default = localhost.
+# When this application is running in a docker together with redis, the host address should be the name of the
+# service/container for example "redis". When only this application is running in docker, localhost will not work and
+# the device's IP address should be used.
+REDIS_HOST=
+# The port for the Redis server, default = 6379.
+REDIS_PORT=
+# Username for the Redis server, default = None.
+REDIS_USERNAME=
+# Password for the Redis server, default = None.
+REDIS_PASSWORD=
