Updated .env.example and variable renaming
Updated .env.example with more explanation on the variables

--- a/src/motion_detection/.env.example
+++ b/src/motion_detection/.env.example
@@ -1,10 +1,35 @@
-PROGRAM_LOG_LEVEL= # See https://download.github.io/picolog/, default = info
-THREAD_COUNT= # Number of threads to use for data extraction, default = 5
+# –––––––-–––––––––--------------------------------- Logging CONFIG ----------------------------------–––––––––––––––– #
+# Logging level for the whole program.
+# Possible values are: debug, info, warning, error and critical. Default = info.
+# See also https://docs.python.org/3/library/logging.html#logging-levels.
+PROGRAM_LOG_LEVEL=
+# If the logger should print the logs in a nice way, default = True.
+LOG_PRETTY_PRINT=
 
-PIXEL_THRESHOLD_FOR_MOVEMENT= # Threshold between consecutive frames to determine if a pixel consisted of movement, default = 30
-MIN_PIXEL_CHANGE_COUNT_FOR_MOVEMENT= # Amount of pixels that need to consist of movement for the two frames to be classified as movement, default = 1000
+# –––––––––-----------------------------------–– MOTION DETECTION CONFIG ––--------------------------------––––––––––– #
+# Number of threads to use for motion detection, default = 5.
+# The more threads the more streams this application can process at the same time at the cost of a heavier load on the
+# Machine.
+THREAD_COUNT=
+# Threshold between consecutive frames to determine if a pixel consisted of movement, default = 30.
+PIXEL_THRESHOLD_FOR_MOVEMENT=
+# Amount of pixels that need to consist of movement for the two frames to be classified as movement, default = 1000.
+MIN_PIXEL_CHANGE_COUNT_FOR_MOVEMENT=
+# How long the motion detection should wait before retrying to get an element from the queue default is  00:00:10.
+# Formatting guide: https://docs.pydantic.dev/latest/api/standard_library_types/#datetimetime.
+RETRY_TIME=
+# Path to save the video files.
+SAVE_PATH=save_path
 
-REDIS_HOST= # The host address where the Redis server is located, default = localhost
-REDIS_PORT= # The port for the Redis server, default = 6379
-REDIS_USERNAME= # Username for the Redis server, default = None
-REDIS_PASSWORD= # Password for the Redis server, default = None
+# –––––––––-----------------------------------––––––- REDIS CONFIG ---–––––--------------------------------––––––––––– #
+# The host address where the Redis server is located, default = localhost.
+# When this application is running in a docker together with redis, the host address should be the name of the
+# service/container for example "redis". When only this application is running in docker, localhost will not work and
+# the device's IP address should be used.
+REDIS_HOST=
+# The port for the Redis server, default = 6379.
+REDIS_PORT=
+# Username for the Redis server, default = None.
+REDIS_USERNAME=
+# Password for the Redis server, default = None.
+REDIS_PASSWORD=
