--- a/src/audio_detection/.env.example
+++ b/src/audio_detection/.env.example
@@ -1,10 +1,32 @@
-PROGRAM_LOG_LEVEL= # See https://download.github.io/picolog/, default = info
-THREAD_COUNT= # Number of threads to use for data extraction, default = 5
+# –––––––-–––––––––--------------------------------- Logging CONFIG ----------------------------------–––––––––––––––– #
+# Logging level for the whole program.
+# Possible values are: debug, info, warning, error and critical. Default = info.
+# See also https://docs.python.org/3/library/logging.html#logging-levels.
+PROGRAM_LOG_LEVEL=
+# If the logger should print the logs in a nice way, default = True.
+LOG_PRETTY_PRINT=
 
-MODEL_CONFIDENCE= # Set confidence needed for model to make prediction, default = 0.7
-DETECT_AUDIO_ONLY_AFTER_MOTION= # Set to True to only detect audio after motion has been detected, default = False
+# –––––––––-----------------------------------–– AUDIO DETECTION CONFIG –––--------------------------------––––––––––– #
+# Number of threads to use for data extraction, default = 5.
+# The more threads the more streams this application can process at the same time at the cost of a heavier load on the
+# Machine.
+THREAD_COUNT=
+# Set confidence needed for model to make prediction, default = 0.7.
+# So if a prediction has a confidence lower than 0.7 it will be ignored.
+MODEL_CONFIDENCE=
+# Set to True to only detect audio after motion has been detected, default = False.
+DETECT_AUDIO_ONLY_AFTER_MOTION=
+# How long the audio detection should wait before retrying to get an element from the queue default is  00:00:10.
+# Formatting guide: https://docs.pydantic.dev/latest/api/standard_library_types/#datetimetime.
+RETRY_TIME=
+# Path to save the video files.
+SAVE_PATH=save_path
 
-REDIS_HOST= # The host address where the Redis server is located, default = localhost
-REDIS_PORT= # The port for the Redis server, default = 6379
-REDIS_USERNAME= # Username for the Redis server, default = None
-REDIS_PASSWORD= # Password for the Redis server, default = None
+# –––––––––-----------------------------------––––––-- API CONFIG ----–––––--------------------------------––––––––––– #
+# whether the connection to the API should be made over a secure connection (HTTPS), default = False.
+# Same config rules apply here as for the REDIS_HOST.
+API_PRIVATE_TLS=
+# The host address where the API server is located, default = localhost.
+API_PRIVATE_HOST=
+# The port for the API server, default = 8001.
+API_PRIVATE_PORT=
