--- a/src/image_detection/.env.example
+++ b/src/image_detection/.env.example
@@ -1,10 +1,43 @@
-PROGRAM_LOG_LEVEL= # See https://download.github.io/picolog/, default = info
+# –––––––-–––––––––--------------------------------- Logging CONFIG ----------------------------------–––––––––––––––– #
+# Logging level for the whole program.
+# Possible values are: debug, info, warning, error and critical. Default = info.
+# See also https://docs.python.org/3/library/logging.html#logging-levels.
+PROGRAM_LOG_LEVEL=
+# If the logger should print the logs in a nice way, default = True.
+LOG_PRETTY_PRINT=
 
-DEVICE= # Set torch device to run the model with, default = cpu
-DEFAULT_MODEL_PATH= # Set path for the default model
-MODEL_CONFIDENCE= # Set confidence needed for model to make prediction, default = 0.7
+# –––––––––-----------------------------------–– IMAGE DETECTION CONFIG –––--------------------------------––––––––––– #
 
-REDIS_HOST= # The host address where the Redis server is located, default = localhost
-REDIS_PORT= # The port for the Redis server, default = 6379
-REDIS_USERNAME= # Username for the Redis server, default = None
-REDIS_PASSWORD= # Password for the Redis server, default = None
+# Set device to run the model with CPU or GPU, default = cpu.
+DEVICE=
+# Path for the default model.
+DEFAULT_MODEL_PATH=default_model_path
+# Set confidence needed for model to make prediction, default = 0.7
+MODEL_CONFIDENCE=
+# How long the image detection should wait before retrying to get an element from the queue default is  00:00:10.
+# Formatting guide: https://docs.pydantic.dev/latest/api/standard_library_types/#datetimetime.
+RETRY_TIME=
+# Path to save the video files.
+SAVE_PATH=save_path
+
+# –––––––––-----------------------------------––––––- REDIS CONFIG ---–––––--------------------------------––––––––––– #
+# The host address where the Redis server is located, default = localhost.
+# When this application is running in a docker together with redis, the host address should be the name of the
+# service/container for example "redis". When only this application is running in docker, localhost will not work and
+# the device's IP address should be used.
+REDIS_HOST=
+# The port for the Redis server, default = 6379.
+REDIS_PORT=
+# Username for the Redis server, default = None.
+REDIS_USERNAME=
+# Password for the Redis server, default = None.
+REDIS_PASSWORD=
+
+# –––––––––-----------------------------------––––––-- API CONFIG ----–––––--------------------------------––––––––––– #
+# whether the connection to the API should be made over a secure connection (HTTPS), default = False.
+# Same config rules apply here as for the REDIS_HOST.
+API_PRIVATE_TLS=
+# The host address where the API server is located, default = localhost.
+API_PRIVATE_HOST=
+# The port for the API server, default = 8001.
+API_PRIVATE_PORT=
