--- a/src/stream_ranker/.env.example
+++ b/src/stream_ranker/.env.example
@@ -1,14 +1,39 @@
-PROGRAM_LOG_LEVEL= # See https://download.github.io/picolog/, default = info
-THREAD_COUNT= # Number of threads to use for data extraction, default = 5
+# –––––––-–––––––––--------------------------------- Logging CONFIG ----------------------------------–––––––––––––––– #
+# Logging level for the whole program.
+# Possible values are: debug, info, warning, error and critical. Default = info.
+# See also https://docs.python.org/3/library/logging.html#logging-levels.
+PROGRAM_LOG_LEVEL=
+# If the logger should print the logs in a nice way, default = True.
+LOG_PRETTY_PRINT=
 
-USER_VOTE_WEIGHT= # Weight of user votes, default = 10
-ANIMAL_COUNT_WEIGHT= # Weight of animal count, default = 2
-ANIMAL_SURFACE_WEIGHT= # Weight of animal surface, default = 10
-AUDIO_CONFIDENCE_WEIGHT= # Weight of audio confidence, default = 1
-DECREASE_SCORE_WEIGHT= # Weight of decrease score, default = 1
-PENALIZE_STREAM_AFTER_TURNS= # Number of turns after which to penalize a stream, default = 0
+# -–––––––––-----------------------------------–– STREAM RANKING CONFIG -––--------------------------------––––––––––– #
+# Weight of user votes, default = 10.
+USER_VOTE_WEIGHT=
+# Weight of animal count, default = 2.
+ANIMAL_COUNT_WEIGHT=
+ # Weight of animal surface, default = 10.
+ANIMAL_SURFACE_WEIGHT=
+# Weight of audio confidence, default = 1.
+AUDIO_CONFIDENCE_WEIGHT=
+# Weight of decrease score, default = 1.
+DECREASE_SCORE_WEIGHT=
+# Number of turns after which to penalize a stream, default = 0.
+PENALIZE_STREAM_AFTER_TURNS=
+# How long the stream ranker should wait before retrying to get an element from the queue default is  00:00:10.
+# Formatting guide: https://docs.pydantic.dev/latest/api/standard_library_types/#datetimetime.
+RETRY_TIME=
+# Path to save the video files.
+SAVE_PATH=save_path
 
-REDIS_HOST= # The host address where the Redis server is located, default = localhost
-REDIS_PORT= # The port for the Redis server, default = 6379
-REDIS_USERNAME= # Username for the Redis server, default = None
-REDIS_PASSWORD= # Password for the Redis server, default = None
+# –––––––––-----------------------------------––––––- REDIS CONFIG ---–––––--------------------------------––––––––––– #
+# The host address where the Redis server is located, default = localhost.
+# When this application is running in a docker together with redis, the host address should be the name of the
+# service/container for example "redis". When only this application is running in docker, localhost will not work and
+# the device's IP address should be used.
+REDIS_HOST=
+# The port for the Redis server, default = 6379.
+REDIS_PORT=
+# Username for the Redis server, default = None.
+REDIS_USERNAME=
+# Password for the Redis server, default = None.
+REDIS_PASSWORD=
