--- a/src/video_streamer/.env.example
+++ b/src/video_streamer/.env.example
@@ -1,13 +1,37 @@
-PROGRAM_LOG_LEVEL= # See https://download.github.io/picolog/, default = info
-FFMPEG_LOG_LEVEL= # See https://ffmpeg.org/ffmpeg.html#Generic-options, default = info
+# –––––––-–––––––––--------------------------------- Logging CONFIG ----------------------------------–––––––––––––––– #
+# Logging level for the whole program, excluding the ffmpeg processes this has a seperate log condiguration.
+# Possible values are: debug, info, warning, error and critical. Default = info.
+# See also https://docs.python.org/3/library/logging.html#logging-levels.
+PROGRAM_LOG_LEVEL=
+# If the logger should print the logs in a nice way, default = True.
+LOG_PRETTY_PRINT=
+# Logging level specific for the ffmpeg process. Possbile values are: quiet, panic, fatal, error, warning, info,
+# verbose, debug and trace. Default = warning.
+# See also https://ffmpeg.org/ffmpeg.html#Generic-options.
+FFMPEG_LOG_LEVEL=
 
-VIDEO_BATCH_DELTA_TIME= # Time in seconds for each video segment
-PROCESSED_VIDEOS_FOR_BATCH= # The number of videos that need to be processed before it is considered a batch, default is 0.8
-SAVE_PATH= # Path to save the video files
+# –––––––––-----------------------------------–– VIDEO STREAMING CONFIG -––--------------------------------––––––––––– #
+# Time in seconds for each video segment.
+VIDEO_BATCH_DELTA_TIME=
+# The number of videos that need to be processed before it is considered a batch, default is 0.8.
+PROCESSED_VIDEOS_FOR_BATCH=
+# The stream key for a YouTube livestream.
+STREAM_KEY=
+# How long the video streamer should wait before retrying to get an element from the queue default is  00:00:10.
+# Formatting guide: https://docs.pydantic.dev/latest/api/standard_library_types/#datetimetime.
+RETRY_TIME=
+# Path to save the video files.
+SAVE_PATH=save_path
 
-STREAM_KEY= # The stream key for a YouTube livestream
-
-REDIS_HOST= # The host address where the Redis server is located, default = localhost
-REDIS_PORT= # The port for the Redis server, default = 6379
-REDIS_USERNAME= # Username for the Redis server, default = None
-REDIS_PASSWORD= # Password for the Redis server, default = None
+# –––––––––-----------------------------------––––––- REDIS CONFIG ---–––––--------------------------------––––––––––– #
+# The host address where the Redis server is located, default = localhost.
+# When this application is running in a docker together with redis, the host address should be the name of the
+# service/container for example "redis". When only this application is running in docker, localhost will not work and
+# the device's IP address should be used.
+REDIS_HOST=
+# The port for the Redis server, default = 6379.
+REDIS_PORT=
+# Username for the Redis server, default = None.
+REDIS_USERNAME=
+# Password for the Redis server, default = None.
+REDIS_PASSWORD=
