added word2vec to scoring system

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ sqlalchemy = "^2.0.30"
 asyncpg = "^0.29.0"
 psycopg2-binary = "^2.9.9"
 bcrypt = "^4.1"
+transformers = "^4.41.2"
+config = "^0.5.1"
 
 [[tool.poetry.source]]
 name = "torch"
