Integrated the narration and subtitle generator

--- a/src/image_detection/.env.example
+++ b/src/image_detection/.env.example
@@ -20,6 +20,11 @@ RETRY_TIME=
 # Path to save the video files.
 SAVE_PATH=save_path
 
+
+# –––––-----------------------------------–– NARRATION AND SUBTITLES CONFIG –––--------------------------------––––––– #
+# Whether or not to add narration and subtitles to the video fragments, default = True.
+ADD_NARRATION_SUBTITLES=
+
 # –––––––––-----------------------------------––––––- REDIS CONFIG ---–––––--------------------------------––––––––––– #
 # The host address where the Redis server is located, default = localhost.
 # When this application is running in a docker together with redis, the host address should be the name of the
