--- a/src/narration_subtitle_generation/.env.example
+++ b/src/narration_subtitle_generation/.env.example
@@ -1,5 +1,5 @@
 # –––––––-–––––––––--------------------------------- Logging CONFIG ----------------------------------–––––––––––––––– #
-# Logging level for the whole program, excluding the ffmpeg processes this has a seperate log condiguration.
+# Logging level for the whole program, excluding the ffmpeg and yt-dlp processes these have seperate log condigurations.
 # Possible values are: debug, info, warning, error and critical. Default = info.
 # See also https://docs.python.org/3/library/logging.html#logging-levels.
 PROGRAM_LOG_LEVEL=
@@ -10,16 +10,14 @@ LOG_PRETTY_PRINT=
 # See also https://ffmpeg.org/ffmpeg.html#Generic-options.
 FFMPEG_LOG_LEVEL=
 
-# –––––––––-----------------------------------–– VIDEO STREAMING CONFIG -––--------------------------------––––––––––– #
-# Time in seconds for each video segment.
-VIDEO_BATCH_DELTA_TIME=
-# The time in seconds the video streamer should wait before starting a new iteration, default is 8.5
-VIDEO_ITERATION_DELAY=
-# The number of videos that need to be processed before it is considered a batch, default is 0.8.
-PROCESSED_VIDEOS_FOR_BATCH=
-# The stream key for a YouTube livestream.
-STREAM_KEY=
-# How long the video streamer should wait before retrying to get an element from the queue default is  00:00:10.
+# ––––––––---------------------------------- NARRATION AND SUBTITLES CONFIG -------------------------------––––––––––– #
+# Path to the model for the subtitle generation.
+CAPTION_MODEL=caption_model
+# Path to the config for the narration generation.
+TTS_CONFIG_PATH=tts_config_path
+# Path to the model for the narration generation.
+TTS_MODEL_PATH=tts_model_path
+# How long the stream downloader should wait before trying to restart the stream download task, default is  01:00:00.
 # Formatting guide: https://docs.pydantic.dev/latest/api/standard_library_types/#datetimetime.
 RETRY_TIME=
 # Path to save the video files.
